# steel_price

./: .env.example  .gitattributes  .gitignore  README.md  UBUNTU_SETUP.md  WINDOWS_SETUP.md  pyproject.toml  queries.toml  requirements.txt  sitecustomize.py
Mysteel_Browser_Data/: Last Browser  Local State
Mysteel_Browser_Data/Default/: Affiliation Database  BrowsingTopicsState  DIPS  Favicons  History  Login Data  Network Action Predictor  Preferences  Secure Preferences  Top Sites  Web Data  passkey_enclave_state
Mysteel_Browser_Data/GrShaderCache/: data_0  data_1  f_000001  f_000002  f_000003  f_000004  f_000005  f_000006  f_000007  f_000008  f_000009  f_00000a  f_00000b  f_00000c  f_00000d  index
Mysteel_Browser_Data/GraphiteDawnCache/: data_1  index
Mysteel_Browser_Data/Safe Browsing/: ChromeExtMalware.store  UrlBilling.store  UrlBilling.store.4_13418965484084453  UrlBilling.store.4_13418973014794429  UrlBilling.store.4_13418973730177136  UrlCsdAllowlist.store  UrlCsdDownloadAllowlist.store  UrlHighConfidenceAllowlist.store  UrlMalBin.store  UrlMalBin.store.4_13418965484075491  UrlMalBin.store.4_13418973014791980  UrlMalBin.store.4_13418973730174910  UrlMalware.store  UrlMalware.store.4_13418965484067264  UrlMalware.store.4_13418973014784586  UrlMalware.store.4_13418973730168243  UrlSoceng.store  UrlSubresourceFilter.store  (+10 more)
output/: mysteel_export_20260326_142932.json
scripts/: build_total_price.py  mysteel_export_excel.py  mysteel_price_automation.py  run_daily_pipeline.py  send_wechat_files.py  upload_total_price_to_mariadb.py
test/: 我的钢铁网查询表(1).xls
(+374 files in other folders)
